<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarProcedimentoFragment">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/green"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/criar_procedimento"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="130dp">

        <EditText
            android:id="@+id/nome_novo_procedimento"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/nome_do_procedimento"
            android:inputType="text"
            android:textColorHint="@color/grey2"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/Duracao_novo_procedimento"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/duracao"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textColorHint="@color/grey2"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/valor_novo_procedimento"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            android:textColorHint="@color/grey2"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/criar_procedimento"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/green"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/criar"
            />

    </LinearLayout>


</FrameLayout>