<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdmProfile_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/green"
        />
    <TextView
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:text="@string/hi_lorena"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/sair"
        android:textColor="@color/white"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="110dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profile_picture"
        app:civ_border_color="@color/white"
        app:civ_border_width="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Lorena Machado"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        />

    <!--    dados cliente-->

    <!--    email-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/e_mail"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginTop="350dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:text="Lorena@bilingue.com"
        android:textSize="16sp"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit"
        android:background="@android:color/transparent"
        android:layout_marginTop="350dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:id="@+id/editar_email"
        />

    <!--    senha-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/senha"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginTop="420dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:text=""
        android:textSize="16sp"
        android:id="@+id/senha"
        android:inputType="textPassword"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit"
        android:background="@android:color/transparent"
        android:layout_marginTop="420dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:id="@+id/editar_senha"
        />
    <!--    telefone-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/telefone"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginTop="480dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:text="XX XXXXX-XXX"
        android:textSize="16sp"
        android:id="@+id/telefone"
        android:inputType="phone"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit"
        android:background="@android:color/transparent"
        android:layout_marginTop="480dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:id="@+id/editar_telefone"
        />
    <!--    cidade-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/cidade"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginTop="550dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:text="Charqueadas - RS"
        android:textSize="16sp"
        android:id="@+id/cidade"
        android:inputType="text"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit"
        android:background="@android:color/transparent"
        android:layout_marginTop="550dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:id="@+id/editar_cidade"
        />


</FrameLayout>